[package]
name = "blaze_ftc"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "~1.0.38"
jni = "0.19.0"
crossbeam-channel = "0.5.15"
serial2 = "0.2.33"
log = "0.4.29"
android_logger = "0.15.1"
libc = "0.2.178"
nix = { version = "0.29.0", features = ["fs"] }
termios = "0.3.3"
num_enum = "0.7.5"
bytemuck = "1.24.0"
byteorder = "1.5.0"
arc-swap = "1.7.1"
pid = "4.0.0"
lazy_static = "1.5.0"
num-traits = "0.2.19"

[profile.dev]
panic = "unwind"
debug = true