[package]
name = "blaze_ftc"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "~1.0.38"
jni = "0.22.4"
crossbeam-channel = "0.5.15"
serial2 = "0.2.33"
log = "0.4.29"
android_logger = "0.15.1"
libc = "0.2.178"
nix = { version = "0.29.0", features = ["fs"] }
termios = "0.3.3"
num_enum = "0.7.5"
bytemuck = "1.24.0"
byteorder = "1.5.0"
arc-swap = "1.7.1"
pid = "4.0.0"
lazy_static = "1.5.0"
num-traits = "0.2.19"
#wait_on_address = "0.1.3"
core_affinity = "0.8.3"
thread-priority = "3.0.0"
wait_on_address = { git = "https://github.com/owenpmckenna/wait_on_address" }#had to apply a fix for 32-bit time on old android
atomptr = "3.2.0"
atomic_float = "1.1.0"

[profile.dev]
panic = "unwind"
debug = true